--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+RxNav = "204b4f30-d656-11eb-06dc-3b971f9bbb52"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -16,6 +17,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 julia = "1"
 HTTP = "0.8, 0.9, 1.0, 1.1, 1.2"
 EzXML = "1.0, 1.1, 1.2, 1.3"
+RxNav = "0.1, 0.2, 0.3"
 
 [targets]
 test = ["Pkg", "Test"]
